# Logan

Example/Logan-Android/: build.gradle.kts  gradle.properties  settings.gradle.kts
Example/Logan-Android/app/: build.gradle.kts
Example/Logan-Android/app/src/main/: AndroidManifest.xml
Example/Logan-Android/app/src/main/java/test/logan/dianping/com/logan/: MainActivity.java  MyApplication.java  RealSendLogRunnable.java
Example/Logan-Android/gradle/wrapper/: gradle-wrapper.properties
Example/Logan-Android/logan/: CMakeLists.txt  build.gradle.kts
Example/Logan-Android/logan/src/androidTest/java/com/dianping/logan/: LoganTest.java
Example/Logan-Android/logan/src/main/: AndroidManifest.xml
Example/Logan-Android/logan/src/main/java/com/dianping/logan/: CLoganProtocol.java  ConstantCode.java  LoganConfig.java  LoganControlCenter.java  LoganProtocol.java  LoganThread.java  SendLogDefaultRunnable.java  Util.java  WriteAction.java
Example/Logan-Android/logan/src/main/jni/: clogan_protocol.h
Logan/Clogan/: clogan_core.c
Logan/Cmdline/: README.md  pom.xml
Logan/Cmdline/src/main/java/com/meituan/: LegacyLoganProtocol.java  LoganProtocol.java  ResultEnum.java  Tuple.java
Logan/Cmdline/src/main/java/com/meituan/cmdline/: Arguments.java  JCommanderWrapper.java  Main.java
Logan/Cmdline/src/main/resources/: log4j.properties
